--- a/packages/ibm-products-styles/src/components/GetStarted/_get-started.scss
+++ b/packages/ibm-products-styles/src/components/GetStarted/_get-started.scss
@@ -94,18 +94,18 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
   .#{$block-class}__icon:hover {
     background: none;
   }
+}
 
-  .#{$block-class}__footer {
-    position: relative;
-    z-index: 1;
-    justify-content: space-between;
-    border: none;
+.#{$block-class}__get-started .#{$block-class}__footer {
+  position: relative;
+  z-index: 1;
+  justify-content: space-between;
+  border: none;
 
-    .#{$block-class}__action-icon {
-      display: flex;
-      align-self: center;
-      padding-right: $spacing-05;
-    }
+  .#{$block-class}__action-icon {
+    display: flex;
+    align-self: center;
+    padding-right: $spacing-05;
   }
 }
 
