--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
@@ -8,33 +8,32 @@
 
 $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 
-.#{$block-class}__condition-block {
+.#{$block-class}__condition-block,
+.#{$block-class}__condition-block .#{$block-class}__block {
   position: relative;
   display: inline-flex;
-  margin-block-end: $spacing-01;
 }
 
-.#{$block-class}__condition-block:focus {
-  outline: none;
-}
-
-.#{$block-class}__condition-builder-condition:focus::after,
-.#{$block-class}__condition-block:focus::after {
+[role='row']:focus {
   @include focus-outline.focus-outline('outline');
 
-  position: absolute;
-  content: '';
-  inset: 0;
+  outline-offset: 0;
 }
 
 .#{$block-class}__condition-builder-condition__deletion-preview
-  .#{$block-class}__condition-builder-button {
+  .#{$block-class}__condition-builder-button:not(
+    .#{$block-class}__statement-button,
+    .#{$block-class}__connector-button
+  ) {
   background-color: $tag-background-red;
   color: $tag-color-red;
 }
 
 .#{$block-class}__condition-builder-condition__deletion-preview
-  .#{$block-class}__condition-builder-button:hover {
+  .#{$block-class}__condition-builder-button:not(
+    .#{$block-class}__statement-button,
+    .#{$block-class}__connector-button
+  ):hover {
   background-color: $tag-hover-red;
 }
 
