--- a/packages/ibm-products-styles/src/components/GetStarted/_get-started.scss
+++ b/packages/ibm-products-styles/src/components/GetStarted/_get-started.scss
@@ -1,4 +1,5 @@
 /* stylelint-disable carbon/layout-token-use */
+/* stylelint-disable max-nesting-depth */
 //
 // Copyright IBM Corp. 2024, 2024
 //
@@ -14,6 +15,7 @@
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/react/scss/colors' as *;
 @use '@carbon/layout/scss/convert' as *;
+@use '@carbon/styles/scss/breakpoint' as *;
 
 $block-class: #{c4p-settings.$pkg-prefix}--card;
 
@@ -23,96 +25,104 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
   background: linear-gradient(to bottom, $purple-80 40%, $purple-70);
   border-image: linear-gradient(to bottom, $purple-60, $purple-50) 1;
   color: $text-on-color;
-}
 
-.#{$block-class}__get-started:hover {
-  background: linear-gradient($purple-70-hover, $purple-70-hover);
-}
-
-.#{$block-class}__get-started:focus {
-  border: 2px solid $focus;
-  outline: 1px solid $focus-inset;
-  outline-offset: -3px;
-}
-
-.#{$block-class}__step {
-  @include type.type-style('heading-05');
-
-  padding-top: $spacing-05;
-  padding-left: $spacing-05;
-}
-
-.#{$block-class}__status {
-  position: absolute;
-  z-index: 2;
-  top: $spacing-05;
-  right: $spacing-05;
-}
-
-.#{$block-class}__get-started .#{$block-class}__header-body-container {
-  display: flex;
-}
-
-.#{$block-class}__get-started .#{$block-class}__header {
-  padding-right: $spacing-09;
-}
-
-.#{$block-class}__get-started .#{$block-class}__media {
-  align-content: center;
-}
-
-.#{$block-class}__get-started
-  .#{$block-class}__pictogram
-  ~ .#{$block-class}__content-container {
-  .#{$block-class}__media {
-    /* stylelint-disable-next-line function-no-unknown */
-    margin-top: to-rem(-50px);
-    margin-bottom: -$spacing-09;
+  &:hover {
+    background: linear-gradient($purple-70-hover, $purple-70-hover);
   }
-}
 
-.#{$block-class}__get-started
-  .#{$block-class}__step
-  ~ .#{$block-class}__content-container {
-  .#{$block-class}__media {
-    /* stylelint-disable-next-line function-no-unknown */
-    margin-top: to-rem(-56px);
-    margin-bottom: -$spacing-09;
+  &:focus {
+    border: 2px solid $focus;
+    outline: 1px solid $focus-inset;
+    outline-offset: -3px;
   }
-}
 
-.#{$block-class}__get-started .#{$block-class}__actions {
-  padding: $spacing-05;
-  gap: $spacing-04;
+  .#{$block-class}__sequence {
+    @include type.type-style('heading-05');
 
-  .#{$block-class}__icon {
+    padding-top: $spacing-05;
+    padding-left: $spacing-05;
+  }
+
+  .#{$block-class}__status {
+    position: absolute;
+    z-index: 2;
+    top: $spacing-05;
+    right: $spacing-05;
+  }
+
+  .#{$block-class}__header-body-container {
     display: flex;
-    padding: 0;
-    margin-right: 0;
   }
 
-  .#{$block-class}__icon svg {
-    margin-right: $spacing-02;
+  .#{$block-class}__header {
+    padding-right: $spacing-09;
+
+    @include breakpoint-down(lg) {
+      padding-bottom: 0;
+    }
   }
 
-  .#{$block-class}__icon:hover {
-    background: none;
+  .#{$block-class}__body {
+    @include breakpoint-down(lg) {
+      padding: 0;
+    }
+  }
+  .#{$block-class}__media {
+    align-content: center;
+
+    @include breakpoint-down(lg) {
+      display: none;
+    }
+  }
+
+  .#{$block-class}__pictogram ~ .#{$block-class}__content-container {
+    .#{$block-class}__media {
+      /* stylelint-disable-next-line function-no-unknown */
+      margin-top: to-rem(-50px);
+      margin-bottom: -$spacing-09;
+    }
+  }
+
+  .#{$block-class}__sequence ~ .#{$block-class}__content-container {
+    .#{$block-class}__media {
+      /* stylelint-disable-next-line function-no-unknown */
+      margin-top: to-rem(-56px);
+      margin-bottom: -$spacing-09;
+    }
+  }
+
+  .#{$block-class}__actions {
+    padding: $spacing-05;
+    gap: $spacing-04;
+
+    .#{$block-class}__icon {
+      display: flex;
+      padding: 0;
+      margin-right: 0;
+    }
+
+    .#{$block-class}__icon svg {
+      margin-right: $spacing-02;
+    }
+
+    .#{$block-class}__icon:hover {
+      background: none;
+    }
+  }
+
+  .#{$block-class}__footer {
+    position: relative;
+    z-index: 1;
+    justify-content: space-between;
+    border: none;
+
+    .#{$block-class}__action-icon {
+      display: flex;
+      align-self: center;
+      padding-right: $spacing-05;
+    }
   }
 }
-
-.#{$block-class}__get-started .#{$block-class}__footer {
-  position: relative;
-  z-index: 1;
-  justify-content: space-between;
-  border: none;
-
-  .#{$block-class}__action-icon {
-    display: flex;
-    align-self: center;
-    padding-right: $spacing-05;
-  }
-}
-
 .#{$block-class}__disabled:focus,
 .#{$block-class}__disabled:hover,
 .#{$block-class}__disabled {
