--- a/packages/ibm-products-styles/src/components/_index-released-only-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-released-only-with-carbon.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2020, 2022
+// Copyright IBM Corp. 2020, 2024
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -12,6 +12,7 @@
 @use './APIKeyModal/index-with-carbon' as *;
 @use './ActionSet/index-with-carbon' as *;
 @use './Cascade/index-with-carbon' as *;
+@use './Checklist/index-with-carbon' as *;
 @use './CreateModal/index-with-carbon' as *;
 @use './CreateFullPage/index-with-carbon' as *;
 @use './CreateSidePanel/index-with-carbon' as *;
