--- a/packages/ibm-products-styles/src/components/_index-released-only.scss
+++ b/packages/ibm-products-styles/src/components/_index-released-only.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2020, 2022
+// Copyright IBM Corp. 2020, 2024
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -12,6 +12,7 @@
 @use './APIKeyModal';
 @use './ActionSet';
 @use './Cascade';
+@use './Checklist';
 @use './CreateModal';
 @use './CreateFullPage';
 @use './CreateSidePanel';
