fix(get-started): add card to name

--- a/packages/ibm-products-styles/src/components/GetStartedCard/_index.scss
+++ b/packages/ibm-products-styles/src/components/GetStartedCard/_index.scss
@@ -5,5 +5,4 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-// Import any Carbon component styles used from GetStarted in this file.
-// GetStarted uses the following Carbon components:
+@use './get-started-card';
