--- a/packages/ibm-products-styles/src/components/GetStartedCard/_carbon-imports.scss
+++ b/packages/ibm-products-styles/src/components/GetStartedCard/_carbon-imports.scss
@@ -5,4 +5,5 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use './get-started';
+// Import any Carbon component styles used from GetStartedCard in this file.
+// GetStartedCard uses the following Carbon components:
