--- a/packages/ibm-products/src/components/Checklist/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Checklist/_storybook-styles.scss
@@ -8,6 +8,7 @@
 @use '@carbon/styles/scss/spacing' as *;
 
 .checklist-stories__viewport {
+  // 320px
   max-inline-size: calc(2 * $spacing-13);
-  min-inline-size: calc(2 * $spacing-13); // 320px
+  min-inline-size: calc(2 * $spacing-13);
 }
