--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
@@ -15,41 +15,41 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   @include type-style('body-01');
 }
 
-.#{$block-class}__condition-builder-item__content {
+.#{$block-class}__item__content {
   overflow: auto;
   min-width: $spacing-07 + $spacing-13;
   max-width: $spacing-13 + $spacing-13;
   max-height: $spacing-13 + $spacing-13 + $spacing-07;
 }
 
-.#{$block-class}__condition-builder-item__title {
+.#{$block-class}__item__title {
   @include type-style('heading-01');
 
   padding: $spacing-05;
 }
 
-.#{$block-class}__condition-builder-item-option__search {
+.#{$block-class}__item-option__search {
   padding-block-end: $spacing-05;
   padding-inline: $spacing-05;
 }
 
-.#{$block-class}__condition-builder-item-option__option {
+.#{$block-class}__item-option__option {
   height: 2rem;
   cursor: pointer;
   padding-inline: $spacing-05;
 }
 
-.#{$block-class}__condition-builder-item-option__option:hover {
+.#{$block-class}__item-option__option:hover {
   background-color: $layer-hover;
 }
 
-.#{$block-class}__condition-builder-item-option__option-content {
+.#{$block-class}__item-option__option-content {
   display: flex;
   height: 100%;
   align-items: center;
 }
 
-.#{$block-class}__condition-builder-item-option__option-label {
+.#{$block-class}__item-option__option-label {
   display: flex;
   overflow: hidden;
   align-items: center;
@@ -58,51 +58,51 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   white-space: nowrap;
 }
 
-.#{$block-class}__condition-builder-item-option
+.#{$block-class}__item-option
   > ul[aria-multiSelectable='true']
-  .#{$block-class}__condition-builder-item-option__option-label {
+  .#{$block-class}__item-option__option-label {
   justify-content: center;
 }
 
-.#{$block-class}__condition-builder-item-option__option:not(:first-of-type)
-  .#{$block-class}__condition-builder-item-option__option-content {
+.#{$block-class}__item-option__option:not(:first-of-type)
+  .#{$block-class}__item-option__option-content {
   border-block-start: 0.0625rem solid $border-subtle;
 }
 
-.#{$block-class}__condition-builder-item-option__option:hover
-  .#{$block-class}__condition-builder-item-option__option-content,
-.#{$block-class}__condition-builder-item-option__option[aria-selected='true']
-  .#{$block-class}__condition-builder-item-option__option-content,
-.#{$block-class}__condition-builder-item-option__option:hover
-  + .#{$block-class}__condition-builder-item-option__option
-  .#{$block-class}__condition-builder-item-option__option-content,
-.#{$block-class}__condition-builder-item-option__option[aria-selected='true']
-  + .#{$block-class}__condition-builder-item-option__option
-  .#{$block-class}__condition-builder-item-option__option-content {
+.#{$block-class}__item-option__option:hover
+  .#{$block-class}__item-option__option-content,
+.#{$block-class}__item-option__option[aria-selected='true']
+  .#{$block-class}__item-option__option-content,
+.#{$block-class}__item-option__option:hover
+  + .#{$block-class}__item-option__option
+  .#{$block-class}__item-option__option-content,
+.#{$block-class}__item-option__option[aria-selected='true']
+  + .#{$block-class}__item-option__option
+  .#{$block-class}__item-option__option-content {
   border-block-start-color: transparent;
 }
 
-.#{$block-class}__condition-builder-item-option__option[aria-selected='true'] {
+.#{$block-class}__item-option__option[aria-selected='true'] {
   background-color: $layer-selected;
 }
 
-.#{$block-class}__condition-builder-item-option__option[aria-selected='true']:hover {
+.#{$block-class}__item-option__option[aria-selected='true']:hover {
   background-color: $layer-selected-hover;
 }
 
-.#{$block-class}__condition-builder-item-date,
-.#{$block-class}__condition-builder-item-text,
-.#{$block-class}__condition-builder-item-number,
-#{$block-class}__condition-builder-item-time {
+.#{$block-class}__item-date,
+.#{$block-class}__item-text,
+.#{$block-class}__item-number,
+#{$block-class}__item-time {
   padding-block-end: $spacing-05;
   padding-inline: $spacing-05;
 }
 
-.#{$block-class}__condition-builder-checkmark {
+.#{$block-class}__checkmark {
   margin-left: auto;
 }
 
-.#{$block-class}__condition-builder-button {
+.#{$block-class}__button {
   @include utilities.button-reset();
 
   display: inline-flex;
@@ -115,7 +115,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   padding-inline: $spacing-03;
   white-space: nowrap;
 }
-.#{$block-class}__condition-builder-button:hover {
+.#{$block-class}__button:hover {
   background-color: $layer-hover;
 }
 .#{$block-class}__condition-builder__group.hoveredConnector
@@ -125,7 +125,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   background-color: $layer-hover;
 }
 
-.#{$block-class}__condition-builder-button:focus {
+.#{$block-class}__button:focus {
   @include focus-outline.focus-outline('outline');
 
   content: '';
@@ -162,7 +162,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   }
 }
 
-.#{$block-class}__condition-builder-item-option__option:focus {
+.#{$block-class}__item-option__option:focus {
   @include focus-outline.focus-outline('outline');
 }
 // .#{$block-class}__tree {
@@ -174,10 +174,10 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 //   }
 //   .#{$block-class}__condition-wrapper
 //     > :nth-child(1)
-//     .#{$block-class}__condition-builder-button,
+//     .#{$block-class}__button,
 //   .#{$block-class}__condition-wrapper
 //     > :nth-child(2)
-//     .#{$block-class}__condition-builder-button {
+//     .#{$block-class}__button {
 //     box-shadow: inset 0 #{$spacing-01} 0 0 var(--#{$block-class}__condition-wrapper-color);
 //   }
 // }
