--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -77,3 +77,4 @@
 @use './FilterPanel/index-with-carbon' as *;
 @use './ConditionBuilder/index-with-carbon' as *;
 @use './GetStartedCard/index-with-carbon' as *;
+@use './GuideBanner/index-with-carbon' as *;
