fix(Datagrid): added border right with the correct token

--- a/packages/ibm-products/src/components/Datagrid/styles/_useStickyColumn.scss
+++ b/packages/ibm-products/src/components/Datagrid/styles/_useStickyColumn.scss
@@ -37,6 +37,7 @@
   position: sticky !important;
   z-index: 1;
   left: 0;
+  border-right: 1px solid $active-light-ui;
 }
 
 .#{$block-class}__left-sticky-column-cell.#{$block-class}__left-sticky-column-cell--with-extra-select-column,
