fix: focus for the cell
fix: focus for the cell

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_useInlineEdit.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_useInlineEdit.scss
@@ -80,6 +80,12 @@ $row-heights: (
   align-items: center;
 }
 
+.#{variables.$block-class}__inline-edit--outer-cell-checkbox-focus
+  .cds--checkbox-label::before {
+  outline: $spacing-01 solid $focus;
+  outline-offset: 1px;
+}
+
 .#{variables.$block-class}__inline-edit--outer-cell-checkbox {
   display: flex;
   height: -webkit-fill-available;
