--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
@@ -123,7 +123,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 }
 .#{$block-class}__condition-builder__group.hoveredConnector
   .#{$block-class}__condition-wrapper
-  > .conditionBlockWrapper
+  > .#{$block-class}__condition-block
   .#{$block-class}__connector-button {
   background-color: $layer-hover;
 }
@@ -216,12 +216,6 @@ $colors: (
     /* stylelint-disable-next-line carbon/theme-token-use */
     box-shadow: inset 0 #{$spacing-01} 0 0 var(--#{$block-class}__condition-wrapper-color);
   }
-
-  // .#{$block-class}__group{
-  //   .#{$block-class}__condition-block:last-child{
-  //     margin-bottom: 0;
-  //   }
-  // }
 }
 
 .#{$block-class}__groupOperatorConnector {
