feat(AddSelect): update prop name

--- a/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
+++ b/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
@@ -17,7 +17,7 @@
 $block-class: #{$pkg-prefix}--add-select;
 $tearsheet-class: #{$pkg-prefix}--tearsheet;
 
-.#{$block-class}__additional-info {
+.#{$block-class}__supplemental-header {
   padding: $spacing-05;
   padding-bottom: 0;
 }
