--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
@@ -1,3 +1,4 @@
+@use '@carbon/react/scss/theme' as *;
 @use '@carbon/react/scss/spacing' as *;
 @use '@carbon/react/scss/motion';
 @use '@carbon/styles/scss/components/tag' as *;
@@ -5,6 +6,7 @@
 @use '../../../global/styles/project-settings' as c4p-settings;
 @use '@carbon/styles/scss/type';
 @use '@carbon/styles/scss/type' as *;
+@use '@carbon/react/scss/utilities';
 
 $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 
@@ -14,12 +16,17 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   display: inline-flex;
 }
 
-[role='row']:focus {
+.#{$block-class} [role='row'] {
+  position: relative;
+  outline: none;
+}
+.#{$block-class} [role='row']:focus::after {
   @include focus-outline.focus-outline('outline');
 
-  outline-offset: 0;
+  position: absolute;
+  content: '';
+  inset: 0;
 }
-
 .#{$block-class}__condition__deletion-preview
   .#{$block-class}__button:not(
     .#{$block-class}__statement-button,
@@ -43,4 +50,16 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   max-width: $spacing-13;
   text-overflow: ellipsis;
   text-wrap: nowrap;
+}
+.#{$block-class}__group-preview {
+  opacity: 0.5;
+  pointer-events: none;
+}
+.#{$block-class}__connector-disabled {
+  display: flex;
+  min-width: $spacing-10;
+  align-items: center;
+  background-color: $layer;
+  color: $text-helper;
+  padding-inline: $spacing-03;
 }
