--- a/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
+++ b/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
@@ -98,6 +98,7 @@ $header-cell-background: $layer-accent-01;
     position: sticky;
     z-index: 4;
     left: 0;
+    background-color: $background;
   }
   .#{$block-class}__td-th.#{$block-class}__td {
     @include font-family.font-weight('semibold');
@@ -266,6 +267,10 @@ $header-cell-background: $layer-accent-01;
     z-index: 4;
     width: $spacing-01;
     background-color: $background-brand;
+  }
+  .#{$block-class}__th--active-header,
+  .#{$block-class}__td-th--active-header.#{$block-class}__td {
+    background-color: $background-selected-hover;
   }
   .#{$block-class}__th--selected-header,
   .#{$block-class}__td-th--selected-header.#{$block-class}__td {
