fix(dataspreadsheet): drag drop when we have overflow (#5506)
* fix: drag drop with overflow

* fix: review comments

* fix: let to const

* fix: review comments

--- a/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
+++ b/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
@@ -98,6 +98,7 @@ $header-cell-background: $layer-accent-01;
     position: sticky;
     z-index: 4;
     left: 0;
+    background-color: $background;
   }
   .#{$block-class}__td-th.#{$block-class}__td {
     @include font-family.font-weight('semibold');
