--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
@@ -30,7 +30,8 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 .#{$block-class}__condition__deletion-preview
   .#{$block-class}__button:not(
     .#{$block-class}__statement-button,
-    .#{$block-class}__connector-button
+    .#{$block-class}__connector-button,
+    .#{$block-class}__add-button
   ) {
   background-color: $tag-background-red;
   color: $tag-color-red;
@@ -56,6 +57,9 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   opacity: 0;
   pointer-events: none;
   transition: all $duration-moderate-02 motion(exit, expressive);
+  .#{$block-class}__preview-condition {
+    display: flex;
+  }
 }
 .#{$block-class}__group-preview-animate {
   height: auto;
