--- a/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
+++ b/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
@@ -205,7 +205,7 @@ $header-cell-background: $layer-accent-01;
   .#{$block-class}__td-th.#{$block-class}__td_custom {
     align-items: center;
     justify-content: center;
-    gap: 8px;
+    gap: $spacing-03;
   }
 
   .#{$block-class}__selection-area--element {
