--- a/packages/ibm-products-styles/src/components/HTTPErrors/_http-errors.scss
+++ b/packages/ibm-products-styles/src/components/HTTPErrors/_http-errors.scss
@@ -13,6 +13,9 @@
 @use '../../global/styles/project-settings' as c4p-settings;
 
 $block-class: #{c4p-settings.$pkg-prefix}--http-errors;
+$block-class-404: #{c4p-settings.$pkg-prefix}--http-errors-404;
+$block-class-403: #{c4p-settings.$pkg-prefix}--http-errors-403;
+$block-class-other: #{c4p-settings.$pkg-prefix}--http-errors-other;
 
 .#{$block-class} .#{$block-class}__content {
   position: fixed;
@@ -65,4 +68,74 @@ $block-class: #{c4p-settings.$pkg-prefix}--http-errors;
     left: 10%;
     transform: scale(1.5);
   }
+}
+.#{$block-class-404}__prefix-cls-1 {
+  fill: none;
+}
+.#{$block-class-404}__prefix-cls-67 {
+  fill: #697077; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-404}__prefix-cls-68 {
+  fill: #282828; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-404}__prefix-cls-69 {
+  fill: #51565c; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-404}__prefix-cls-70 {
+  fill: #002b50; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-404}__prefix-cls-71 {
+  fill: #413d3d; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-404}__prefix-cls-72 {
+  fill: #908b8b; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-404}__prefix-cls-75 {
+  fill: #a4a4a5; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-404}__prefix-cls-76 {
+  opacity: 0.15;
+}
+.#{$block-class-403}__prefix-cls-1 {
+  fill: none;
+}
+.#{$block-class-403}__prefix-cls-80 {
+  mix-blend-mode: multiply;
+  opacity: 0.25;
+}
+.#{$block-class-403}__prefix-cls-75 {
+  fill: #595655; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-403}__prefix-cls-76 {
+  opacity: 0.15;
+}
+.#{$block-class-403}__prefix-cls-77 {
+  fill: #373d42; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-403}__prefix-cls-78 {
+  fill: #002b50; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-403}__prefix-cls-81 {
+  fill: #2b2828; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-other}__prefix-cls-1 {
+  fill: none;
+}
+.#{$block-class-other}__prefix-cls-69 {
+  fill: #697077; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-other}__prefix-cls-70 {
+  fill: #282828; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-other}__prefix-cls-71 {
+  fill: #51565c; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-other}__prefix-cls-72 {
+  fill: #e0dbda; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-other}__prefix-cls-73 {
+  fill: #003d73; // stylelint-disable-line carbon/theme-token-use
+}
+.#{$block-class-other}__prefix-cls-75 {
+  opacity: 0.15;
 }
