--- a/packages/ibm-products-styles/src/components/HTTPErrors/_http-errors.scss
+++ b/packages/ibm-products-styles/src/components/HTTPErrors/_http-errors.scss
@@ -69,29 +69,31 @@ $block-class-other: #{c4p-settings.$pkg-prefix}--http-errors-other;
     transform: scale(1.5);
   }
 }
+/* stylelint-disable */
+
 .#{$block-class-404}__prefix-cls-1 {
   fill: none;
 }
 .#{$block-class-404}__prefix-cls-67 {
-  fill: #697077; // stylelint-disable-line carbon/theme-token-use
+  fill: #697077;
 }
 .#{$block-class-404}__prefix-cls-68 {
-  fill: #282828; // stylelint-disable-line carbon/theme-token-use
+  fill: #282828;
 }
 .#{$block-class-404}__prefix-cls-69 {
-  fill: #51565c; // stylelint-disable-line carbon/theme-token-use
+  fill: #51565c;
 }
 .#{$block-class-404}__prefix-cls-70 {
-  fill: #002b50; // stylelint-disable-line carbon/theme-token-use
+  fill: #002b50;
 }
 .#{$block-class-404}__prefix-cls-71 {
-  fill: #413d3d; // stylelint-disable-line carbon/theme-token-use
+  fill: #413d3d;
 }
 .#{$block-class-404}__prefix-cls-72 {
-  fill: #908b8b; // stylelint-disable-line carbon/theme-token-use
+  fill: #908b8b;
 }
 .#{$block-class-404}__prefix-cls-75 {
-  fill: #a4a4a5; // stylelint-disable-line carbon/theme-token-use
+  fill: #a4a4a5;
 }
 .#{$block-class-404}__prefix-cls-76 {
   opacity: 0.15;
@@ -104,38 +106,40 @@ $block-class-other: #{c4p-settings.$pkg-prefix}--http-errors-other;
   opacity: 0.25;
 }
 .#{$block-class-403}__prefix-cls-75 {
-  fill: #595655; // stylelint-disable-line carbon/theme-token-use
+  fill: #595655;
 }
 .#{$block-class-403}__prefix-cls-76 {
   opacity: 0.15;
 }
 .#{$block-class-403}__prefix-cls-77 {
-  fill: #373d42; // stylelint-disable-line carbon/theme-token-use
+  fill: #373d42;
 }
 .#{$block-class-403}__prefix-cls-78 {
-  fill: #002b50; // stylelint-disable-line carbon/theme-token-use
+  fill: #002b50;
 }
 .#{$block-class-403}__prefix-cls-81 {
-  fill: #2b2828; // stylelint-disable-line carbon/theme-token-use
+  fill: #2b2828;
 }
 .#{$block-class-other}__prefix-cls-1 {
   fill: none;
 }
 .#{$block-class-other}__prefix-cls-69 {
-  fill: #697077; // stylelint-disable-line carbon/theme-token-use
+  fill: #697077;
 }
 .#{$block-class-other}__prefix-cls-70 {
-  fill: #282828; // stylelint-disable-line carbon/theme-token-use
+  fill: #282828;
 }
 .#{$block-class-other}__prefix-cls-71 {
-  fill: #51565c; // stylelint-disable-line carbon/theme-token-use
+  fill: #51565c;
 }
 .#{$block-class-other}__prefix-cls-72 {
-  fill: #e0dbda; // stylelint-disable-line carbon/theme-token-use
+  fill: #e0dbda;
 }
 .#{$block-class-other}__prefix-cls-73 {
-  fill: #003d73; // stylelint-disable-line carbon/theme-token-use
+  fill: #003d73;
 }
 .#{$block-class-other}__prefix-cls-75 {
   opacity: 0.15;
 }
+
+/* stylelint-enable */
