--- a/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
+++ b/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
@@ -259,7 +259,9 @@ $header-cell-background: $layer-accent-01;
         background-color: $background-inverse;
       }
     }
-    .#{$block-class}__th--selected-header.#{$block-class}__th {
+    .#{$block-class}__th--selected-header.#{$block-class}__th:not(
+        .#{$block-class}__th--active-header-disabledSwapping
+      ) {
       cursor: grab;
     }
     .#{$block-class}__th--selected-header-reorder-active.#{$block-class}__th {
@@ -293,7 +295,9 @@ $header-cell-background: $layer-accent-01;
       background-color: $background-inverse;
     }
   }
-  .#{$block-class}__th--selected-header.#{$block-class}__th {
+  .#{$block-class}__th--selected-header.#{$block-class}__th:not(
+      .#{$block-class}__th--active-header-disabledSwapping
+    ) {
     cursor: grab;
   }
   .#{$block-class}__th--selected-header-reorder-active.#{$block-class}__th {
